--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,7 +37,7 @@ android {
         compose true
     }
     composeOptions {
-        kotlinCompilerExtensionVersion '1.2.0'
+        kotlinCompilerExtensionVersion = "1.4.3"
     }
     packagingOptions {
         resources {
@@ -53,7 +53,8 @@ dependencies {
     implementation 'androidx.activity:activity-compose:1.3.1'
     implementation "androidx.compose.ui:ui:$compose_ui_version"
     implementation "androidx.compose.ui:ui-tooling-preview:$compose_ui_version"
-    implementation 'androidx.compose.material:material:1.2.0'
+    implementation "androidx.compose.material3:material3:1.0.1"
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
@@ -66,4 +67,11 @@ dependencies {
     implementation("androidx.navigation:navigation-compose:$nav_version")
     debugImplementation "androidx.compose.ui:ui-tooling:1.3.2"
     implementation "androidx.compose.ui:ui-tooling-preview:1.3.2"
+
+    // CORE
+    implementation "com.maxkeppeler.sheets-compose-dialogs:core:1.1.1"
+    // CALENDAR
+    implementation "com.maxkeppeler.sheets-compose-dialogs:calendar:1.1.1"
+
+    implementation("com.himanshoe:charty:1.0.1")
 }
